--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
 <section class="contact container">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:contact@kristall-duisburg.de">contact@kristall-duisburg.de</a></p>
-    <p>Phone: +49 203 7654321</p>
-    <p>Find us on Facebook</p>
+    <p>Email: <a href="kristall.duisburg@gmail.com">kristall.duisburg@gmail.com</a></p>
+    <p>Phone: +49 17663034578</p>
+    <p>Find us on <a href="https://www.facebook.com/kristall.duisburg0">Facebook</a></p>
 </section>
 
 <footer>
