--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
     <p>Email: <a href="kristall.duisburg@gmail.com">kristall.duisburg@gmail.com</a></p>
     <p>Phone: +49 17663034578</p>
     <p>Find us on <a href="https://www.facebook.com/kristall.duisburg0">Facebook</a></p>
+    <p>Find us on <a href="https://www.google.com/maps/place/Kristall+%D9%83%D8%B1%D9%8A%
+                      D8%B3%D8%AA%D8%A7%D9%84+accessories+%26parfum%E2%80%AD/@51.410482,6.7
+                      161404,493m/data=!3m2!1e3!4b1!4m6!3m5!1s0x47b8bf85a3735d19:0x4fec10646
+                      82ba016!8m2!3d51.4104787!4d6.7187153!16s%2Fg%2F11rvjck8_6?entry=ttu&g_
+                      ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D">Google Maps</a></p>
 </section>
 
 <footer>
